# Snake

./: .gitignore  README.md
C/: CMakeLists.txt  Makefile  README.md  main.c  test_poison.c  test_poisons_list.c  test_position.c  test_snake.c
C/lib/poison/: CMakeLists.txt  Makefile  README.md  poison.c  poison.h  test_poison.c
C/lib/poisons_list/: CMakeLists.txt  Makefile  README.md  poisons_list.c  poisons_list.h  test_poisons_list.c
C/lib/position/: CMakeLists.txt  Makefile  README.md  position.c  position.h  test_position.c
C/lib/random/: CMakeLists.txt  Makefile  README.md  random.c  random.h
C/lib/snake/: CMakeLists.txt  Makefile  README.md  snake.c  snake.h  test_snake.c
C/nc_lib/nc_poisons_list/: CMakeLists.txt  Makefile  README.md  nc_poisons_list.c  nc_poisons_list.h
C/nc_lib/nc_snake/: CMakeLists.txt  Makefile  README.md  nc_snake.c  nc_snake.h
test/: README.md
